tests/NormalTests/paczka1/fuzzy1/97694502.err
Error in line 5: sIT49oJs S287 18,6
Error in line 20: sIT49oJs A782 65,4
Error in line 22: sIT49oJs S63 54,9
Error in line 21: j5bnG49 S287 180,6
Error in line 34: sIT49oJs A782 275,6
